# engine

./: .gitignore  Cargo.toml  LICENSE  README.md
.config/: nextest.toml
.github/workflows/: rust.yml
src/: audio_codec.rs  client.rs  connectable.rs  engine.rs  executor.rs  history.rs  kind.rs  lib.rs  loudness.rs  main.rs  message.rs  meter.rs  modulator.rs  osc.rs  pitch_shift.rs  plan_builder.rs  render_plan.rs  routing.rs  simd.rs  state.rs  track.rs  triple_buffer.rs  worker.rs
src/audio/: clip.rs  io.rs  mod.rs  track.rs
src/engine/: hardware.rs  midi.rs  mod.rs  plugins.rs  runtime.rs  topology.rs  transport_record_bounce.rs
src/hw/: alsa.rs  common.rs  config.rs  jack.rs  latency.rs  midi_hub.rs  mod.rs  options.rs  ports.rs  sndio.rs  traits.rs  wasapi.rs
src/hw/coreaudio/: convert.rs  driver.rs  ioproc.rs  midi_hub.rs
src/hw/oss/: audio_core.rs  channel.rs  consts.rs  convert.rs  driver.rs  io_util.rs  ioctl.rs  mod.rs  sync.rs
src/midi/: clip.rs  io.rs  track.rs
src/plugins/: clap.rs  clap_oop.rs  clap_proc.rs  ipc.rs  lv2.rs  lv2_oop.rs  lv2_proc.rs  mod.rs  types.rs  vst3_oop.rs  vst3_proc.rs
src/plugins/vst3/: host.rs  interfaces.rs  midi.rs  mod.rs  processor.rs
src/track/: clip_render.rs  instances.rs  mod.rs  plugins.rs  process.rs  session.rs  track_routing.rs
src/workers/: hw_worker.rs  oss_worker.rs  worker.rs
