[package]
name = "maolan-engine"
version = "0.2.28"
edition = "2024"
description = "Audio engine for the Maolan DAW with audio/MIDI tracks, routing, export, and out-of-process CLAP/VST3/LV2 plugin support"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/maolan/engine"
homepage = "https://maolan.rs"
documentation = "https://docs.rs/maolan-engine"
keywords = ["audio", "midi", "vst3", "clap", "lv2"]
categories = ["multimedia::audio"]

[dependencies]
num_cpus = "1.17.0"
ffmpeg-next = "8.0.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing-subscriber = "0.3.22"
tracing = "0.1.44"
byteorder = "1.5.0"
midly = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maolan-plugin-protocol = "0.0.11"
uuid = { version = "1.15", features = ["v4"] }
wide = "1.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = { version = "0.11.0" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.2", features = ["ioctl", "poll"] }
jack = "0.13.5"

[target.'cfg(target_os = "windows")'.dependencies]
cpal = { version = "0.17.3" }
midir = "0.11.0"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2.17"
coremidi = "0.9.0"
